added javadocs to ThreadManager class